# data-classifier

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  INITIATION_PROMPT.md  README.md  cloudbuild-release.yaml  mkdocs.yml  pyproject.toml
.claude/: sprint-config.yaml
.dvc/: config
.github/: secret_scanning.yml
backlog/: aba-routing-number-pattern-checksum-validator.yaml  accuracy-benchmark-harness-precision-recall-f1-per-entity-type.yaml  accuracy-benchmark-suite-with-labeled-dataset.yaml  adapt-process-docs-for-python-coding-standards-dod-gotchas.yaml  adaptive-sampling-request-more-samples-for-ambiguous-columns-two-pass-classification.yaml  add-joint-miss-rate-metric-to-family-benchmark-use-as-sprint-gate.yaml  add-unit-tests-for-all-collision-pairs-ssn-sin-aba-sin-npi-phone-dea-iban.yaml  adopt-secretbench-v2-fixture-in-family-benchmark.yaml  ai4privacy-license-reaudit-and-compliance-decision.yaml  allowlist-false-positive-suppression-mechanism.yaml  auto-generated-client-facing-documentation-mkdocs-mkdocstrings-github-pages.yaml  aws-secret-key-pattern-replace-broad-40-char-regex-with-context-dependent-detection-or-remove-standalone-pattern.yaml  azure-storage-key-detection-context-dependent.yaml  backlog-grooming-tag-all-items-with-target-sprint-and-roadmap-iteration.yaml  batch-classification-in-orchestrator-dispatch-columns-to-ml-engines-in-batches-not-one-by-one.yaml  benchmark-emit-all-cascade-findings-multi-label.yaml  benchmark-methodology-adopt-industry-standard-evaluation-real-corpora-macro-micro-f1-primary-label-vs-multi-label-modes.yaml  benchmark-negative-corpus-cleanup.yaml  benchmark-real-corpus-baseline-report-document-sprint-4-ai4privacy-nemotron-secretbench-gitleaks-results-as-baseline.yaml  benchmark-reporting-add-macro-f1-per-entity-type-f1-primary-label-accuracy-alongside-current-micro-f1.yaml  boundary-detector-content-type-transition-in-mixed-text.yaml  bq-connector-coordination-surface-table-schema-context-and-support-adaptive-sampling.yaml  bq-vague-column-corpus-synthetic-test-corpus-with-generic-column-names-description-data-field-1-value-notes-containing-mixed-pii-content-validate-match-ratio-semantics.yaml  browser-extension-poc-chrome-secret-detection-client-js-regexp-77-patterns.yaml  budget-aware-parallel-execution-live-p95-latency.yaml  build-labeled-evaluation-dataset-from-wildchat-corpus-review.yaml  canadian-sin-luhn-validation-failing-on-unformatted-9-digit-values-corpus-or-validator-bug.yaml  canadian-sin-pattern-luhn-validator.yaml  cascade-suppress-short-circuit-on-heterogeneous-shape.yaml  char-class-diversity-should-boost-composite-score-not-just-gate-entry.yaml  character-frequency-distribution-analysis-for-language-detection-and-encoded-data-identification.yaml  ci-green-on-github-actions.yaml  ci-install-test-fresh-venv-install-import-smoke-test-bundled-data-file-validation-profiles-patterns-config-models-to-catch-packaging-regressions.yaml  ci-matrix-add-ml-extra-job-to-catch-ml-dependent-test-failures.yaml  ci-silences-dvc-pull-failures-change-echo-to-exit-1-in-ci-yaml.yaml  classify-text-endpoint-unstructured-content.yaml  clean-nemotron-synthetic-cc-corpus-invalid-luhn-checksums.yaml  cloud-build-weekly-wheel-integrity-check-routine.yaml  cloud-dlp-comparator-benchmark-data-classifier-against-google-cloud-dlp-on-nemotron-ai4privacy-corpora.yaml  cloud-dlp-integration-engine-google-cloud-dlp.yaml  (+187 more)
classification-library-docs/: 01-architecture.md  05-pipelines.md  06-use-cases.md  07-performance-resource-management.md  08-prompt-analysis-module-spec.md  09-structural-detection-spec.md  14-regex-engine-reference.md  DECISIONS.md  classification-library-spec.md  research-summary-prompt-intent-classification.md
data/: .gitignore  dolly_15k.dvc  m4d_phase3_corpus.dvc  m4d_phase3a_corpus.dvc  m4d_phase3b_corpus.dvc  oasst2.dvc  wildchat_1m.dvc  wildchat_1m_credential_prompts.jsonl.dvc  wildchat_eval.dvc  wildchat_labeled_eval.dvc
data_classifier/: __init__.py  datasets.py  download_models.py  export_onnx.py  scan_text.py
data_classifier_core/: .gitignore  Cargo.toml  README.md  pyproject.toml
data_classifier_core/bench/: benchmark.html  compare_parity.py  corpus_subset.json  patterns_compact.json  python_results.py
data_classifier_core/patterns/: unified_patterns.json
data_classifier_core/src/: lib.rs  text_model.rs
data_classifier_core/src/secret_detector/: config.rs  decoder.rs  entropy.rs  fp_filters.rs  key_scoring.rs  kv_pass.rs  mod.rs  opaque_pass.rs  pem_pass.rs  redaction.rs  regex_pass.rs  types.rs  zone_scorer.rs
data_classifier_core/src/secret_detector/parsers/: code_literals.rs  connection_str.rs  env.rs  json.rs  mod.rs  toml.rs  url_query.rs  yaml.rs
data_classifier_core/src/secret_detector/validators/: checksum.rs  credential.rs  crypto.rs  identity.rs  luhn.rs  mod.rs  network.rs  placeholder.rs
data_classifier_core/src/zone_detector/: assembler.rs  block_validator.rs  config.rs  data_detector.rs  features.rs  format_detector.rs  language.rs  mod.rs  negative.rs  pre_screen.rs  prose_detector.rs  scope.rs  structural.rs  syntax.rs  tokenizer.rs  types.rs
data_classifier_core/tests/: secret_integration.rs  wasm_parity_fixtures.json  zone_partitioning.rs  zone_scoring_integration.rs
docs/: BENCHMARK_METHODOLOGY.md  CLIENT_INTEGRATION_GUIDE.md  GOTCHAS.md  PATTERN_SOURCES.md  ROADMAP.md  SECRET_DETECTION.md  migration-from-bq-connector.md  pattern-library.html
docs-public/: changelog.md  getting-started.md  index.md
scripts/: analyze_secretbench_fns.py  build_review_corpus.py  build_unified_patterns.py  build_wildchat_eval.py  build_wildchat_labeled.py  ci_browser_parity.sh  collect_stats.py  cross_runtime_parity.sh  download_corpora.py  evaluate_gliner_models.py  export_onnx_model.py  generate_browser_patterns.py  generate_catalog.py  generate_pattern_docs.py  gliner_threshold_sweep.py  ingest_credential_patterns.py  ingest_name_lists.py  install_smoke_test.py  m4c_build_gold_set.py  m4d_phase3_build_scale_corpus.py  m4d_phase3_build_worksheet.py  m4d_phase3_score_worksheet.py  (+14 more)
(+580 files in other folders)
