[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_classifier"
version = "0.1.0"
description = "General-purpose data classification engine for detecting sensitive data in structured database columns."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "google-re2>=1.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "phonenumbers>=8.13",
]

[project.optional-dependencies]
ml = [
    "gliner>=0.2",
    "onnxruntime>=1.17",
]
ml-full = [
    "gliner>=0.2",
    "onnxruntime>=1.17",
    "torch>=2.0",
    "transformers>=4.40",
    "onnx>=1.15",
]
ml-api = [
    "gliner2>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27",
    "agile-backlog>=0.30",
    "faker>=25.0",
    "hypothesis>=6.100",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.setuptools.packages.find]
include = ["data_classifier*"]

[tool.setuptools.package-data]
data_classifier = [
    "profiles/*.yaml",
    "patterns/*.json",
    "config/*.yaml",
    "models/gliner_onnx/*",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N815"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501", "N803", "N806"]
"tests/benchmarks/meta_classifier/evaluate.py" = ["N803", "N806", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
