[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_classifier"
version = "0.8.0"
description = "General-purpose data classification engine for detecting sensitive data in structured database columns."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "google-re2>=1.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "phonenumbers>=8.13",
]

[project.scripts]
data-classifier-download-models = "data_classifier.download_models:main"

[project.optional-dependencies]
meta = [
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "scipy>=1.11",
]
ml = [
    # Lean runtime extra. Ships what production needs to run the
    # GLiNER2Engine against a pre-exported ONNX model via onnxruntime.
    # The model itself is distributed separately via
    # `python -m data_classifier.download_models` (Sprint 8 Item 5) —
    # this extra intentionally does NOT pull torch/transformers.
    "gliner>=0.2",
    "onnxruntime>=1.17",
]
ml-full = [
    # Developer / export extra. Required for `python -m
    # data_classifier.export_onnx` which converts an HF model to ONNX.
    # NOT required at runtime. Bring this in on dev machines and in the
    # release pipeline's export step, not in production containers.
    "gliner>=0.2",
    "onnxruntime>=1.17",
    "torch>=2.0",
    "transformers>=4.40",
    "onnx>=1.15",
]
# Note: the [ml-api] extra (gliner2>=1.0) was deleted in v0.8.0 —
# see CHANGELOG.md. It declared a package name that does not match
# what gliner_engine.py actually imports; no consumer used it.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27",
    "agile-backlog>=0.30",
    "faker>=25.0",
    "hypothesis>=6.100",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
bench-compare = [
    "presidio-analyzer>=2.2",
    "spacy>=3.7",
]

[tool.setuptools.packages.find]
include = ["data_classifier*"]

[tool.setuptools.package-data]
data_classifier = [
    "profiles/*.yaml",
    "patterns/*.json",
    "config/*.yaml",
    "models/gliner_onnx/*",
    "models/*.pkl",
    "models/*.json",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N815"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501", "N803", "N806"]
"tests/benchmarks/meta_classifier/evaluate.py" = ["N803", "N806", "E741"]
"tests/test_meta_classifier_training.py" = ["N806"]
# sklearn convention: feature matrix is named `X` (uppercase).
"tests/conftest.py" = ["N806"]
"tests/test_meta_classifier_features.py" = ["N806"]
"tests/benchmarks/meta_classifier/per_class_diagnostic.py" = ["N806"]
"tests/benchmarks/family_accuracy_benchmark.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
