[package]
name = "data_classifier_core"
version = "0.1.0"
edition = "2021"
description = "Zone and secret detection engine — single Rust implementation for Python + browser WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fancy-regex = "0.14"
wasm-bindgen = "0.2"

[[bin]]
name = "evaluate"
path = "src/bin/evaluate.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 2         # speed optimized for benchmarks
lto = true

[profile.release-wasm]
inherits = "release"
opt-level = "s"       # size optimized for WASM bundle
