[package]
name = "data_classifier_core"
version = "0.1.0"
edition = "2021"
description = "Zone and secret detection engine — single Rust implementation for Python + browser WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen"]
python = ["dep:pyo3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fancy-regex = "0.14"
sha2 = "0.10"
wasm-bindgen = { version = "0.2", optional = true }
pyo3 = { version = "0.22", features = ["abi3-py311", "extension-module"], optional = true }

[[bin]]
name = "evaluate"
path = "src/bin/evaluate.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 2
lto = true
